src/objects/Contract_Statistic__c.object
<CustomObject>
    <fields>
        <fullName>DLAC_GS_Customer_Sat__c</fullName>
        <label>GS Quality DLAC (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DLAC_GS_Overall_Status__c</fullName>
        <label>GS Quality DLAC (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DLAC_GS_Revenue__c</fullName>
        <label>GS Revenue DLAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSA_GS_Customer_Sat__c</fullName>
        <label>GS Quality DSA (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_GS_Overall_Status__c</fullName>
        <label>GS Quality DSA (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_GS_Revenue__c</fullName>
        <label>GS Revenue DSA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSI_GS_Customer_Sat__c</fullName>
        <label>GS Quality DSI (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_GS_Overall_Status__c</fullName>
        <label>GS Quality DSI (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_GS_Revenue__c</fullName>
        <label>GS Revenue DSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DTZ_GS_Customer_Sat__c</fullName>
        <label>GS Quality DTZ (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DTZ_GS_Overall_Status__c</fullName>
        <label>GS Quality DTZ (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DTZ_GS_Revenue__c</fullName>
        <label>GS Revenue DTZ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWA_GS_Customer_Sat__c</fullName>
        <label>GS Quality DWA (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_GS_Overall_Status__c</fullName>
        <label>GS Quality DWA (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_GS_Revenue__c</fullName>
        <label>GS Revenue DWA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Quality_Total_Customer_Satisfaction__c</fullName>
        <label>GS Quality Total (Customer Satisfaction)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GS_Quality_Total_Overall_Status__c</fullName>
        <label>GS Quality Total (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inc_GS_Customer_Sat__c</fullName>
        <label>GS Quality Inc (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inc_GS_Overall_Status__c</fullName>
        <label>GS Quality Inc (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inc_GS_Revenue__c</fullName>
        <label>GS Revenue Inc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Myanmar_GS_Customer_Sat__c</fullName>
        <label>GS Quality Myanmar (Customer Sat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Myanmar_GS_Overall_Status__c</fullName>
        <label>GS Quality Myanmar (Overall Status)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Myanmar_GS_Revenue__c</fullName>
        <label>GS Revenue Myanmar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRO_Cycle_Date__c</fullName>
        <label>PRO Cycle Date</label>
        <type>Date</type>
    </fields>
    <label>Contract Statistic</label>
    <nameField>
        <label>Contract Statistic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts Statistic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>